--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OmniGoods Store</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-    <header>
-        <h1>OmniGoods</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="product-card">
-            <img src="https://via.placeholder.com/250" alt="Product Image" />
-            <h2>Mobizac Hammer Torch</h2>
-            <p class="price"><del>₹799</del> ₹385</p>
-            <div class="buttons">
-                <button onclick="addToCart()">Add to Cart</button>
-                <button onclick="buyNow()">Buy Now</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 OmniGoods. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>OmniGoods</title></head><body><div id='root'></div></body></html>
